ISSUE AD-4 Pretty up the tabs some, align inputs in forms

--- a/src/css/basic.css
+++ b/src/css/basic.css
@@ -1,12 +1,15 @@
-
+body { background:lightblue}
 div.hidden { display:none ; }
 
-span.tab {background :grey; border-width: 1px 1px 0px 1px; border-style: solid; padding: 3px; margin: 0px 0px 4px 10px;}
-span.tab.active {background:white;}
+div#body {position:absolute; top:50%; left:50%; margin-left :-250px; margin-top:-50px} 
+
+div.navBar {padding: 0px 0px 0px 30px}
+span.tab {background :grey; border-width: 1px 1px 0px 1px; border-style: solid; padding: 3px 3px 2px 3px; margin: 0px 6px 0px 0px; border-radius:0px 20px 0px 0px}
+span.tab.active {background:white; padding:5px 3px 3px 3px}
 
 div.error {color:rgb(200,0,0); font-weight:bold; margin:4px}
 
-div.tabBody {background:white; border-width: 1px; border-style: solid; padding: 5px; margin:1px}
+div.tabBody {background:white; border-width: 1px; border-style: solid; padding: 5px; margin:1px; border-radius: 15px}
 div.tabBody.narrow {width:500px}
 
 span.imgThumb { border-width: 2px; border-style: solid; float:left ; margin:2px; padding: 2px; }
@@ -17,7 +20,12 @@ span.imgThumb div.thumb div.overlay img.icon { margin: 0px 2px 0px 2px ; float:r
 span.imgThumb div.fileName { width: 180px;}
 span.imgThumb div.fileOwner { width: 90px ; font-style:italic }
 
+.firstColumn {width:30%; float: left; text-align:right}
+.secondColumn {width:65%; float: left; margin: 0px 0px 8px 10px }
+.secondColumnCheck {float: left; margin: 0px 0px 8px 10px; text-align:left }
+
 div#galleryTab form.LogoutButton {clear:both}
+div.spacer {clear:both}
 
 div#imageInfoBox {display:none; position:absolute; top:50%; left:50%; width:450px; margin-left:-225px; height:300px; margin-top:-150px; border-style:inset; border-width:4px; border-color:dark-grey; z-index: 50; background:rgb(220,220,220);}
 div#imageInfoError {display:none; color:red}
